// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VImg should display placeholders 1`] = `
<div class="v-responsive v-img">
  <div class="v-responsive__sizer">
  </div>
  <transition-stub>
    <div class="v-img__image v-img__image--preload v-img__image--cover"
         style="background-image: url(lazy_src); background-position: center center;"
    >
    </div>
  </transition-stub>
  <transition-stub>
    <div class="v-img__placeholder">
      <div>
        loading...
      </div>
    </div>
  </transition-stub>
  <div class="v-responsive__content">
  </div>
</div>
`;

exports[`VImg should display placeholders 2`] = `
<div class="v-responsive v-img">
  <div class="v-responsive__sizer"
       style="padding-bottom: 56.25%;"
  >
  </div>
  <transition-stub>
    <div class="v-img__image v-img__image--cover"
         style="background-image: url(full_src); background-position: center center;"
    >
    </div>
  </transition-stub>
  <transition-stub>
  </transition-stub>
  <div class="v-responsive__content">
  </div>
</div>
`;

exports[`VImg should have aria attributes 1`] = `
<div class="v-responsive v-img"
     aria-label="this is not a decorative image"
     role="img"
>
  <div class="v-responsive__sizer"
       style="padding-bottom: 56.25%;"
  >
  </div>
  <transition-stub>
    <div class="v-img__image v-img__image--cover"
         style="background-image: url(LOAD_SUCCESS_SRC); background-position: center center;"
    >
    </div>
  </transition-stub>
  <div class="v-responsive__content">
  </div>
</div>
`;

exports[`VImg should load 1`] = `
<div class="v-responsive v-img">
  <div class="v-responsive__sizer">
  </div>
  <transition-stub>
    <div class="v-img__image v-img__image--preload v-img__image--cover"
         style="background-position: center center;"
    >
    </div>
  </transition-stub>
  <div class="v-responsive__content">
  </div>
</div>
`;

exports[`VImg should load 2`] = `
<div class="v-responsive v-img">
  <div class="v-responsive__sizer"
       style="padding-bottom: 56.25%;"
  >
  </div>
  <transition-stub>
    <div class="v-img__image v-img__image--cover"
         style="background-image: url(LOAD_SUCCESS_SRC); background-position: center center;"
    >
    </div>
  </transition-stub>
  <div class="v-responsive__content">
  </div>
</div>
`;

exports[`VImg should override vuetify-loader values 1`] = `
<div class="v-responsive v-img">
  <div class="v-responsive__sizer"
       style="padding-bottom: 50%;"
  >
  </div>
  <transition-stub>
    <div class="v-img__image v-img__image--preload v-img__image--cover"
         style="background-image: url(lazySrc_manual); background-position: center center;"
    >
    </div>
  </transition-stub>
  <div class="v-responsive__content">
  </div>
</div>
`;

exports[`VImg should update src 1`] = `
<div class="v-responsive v-img">
  <div class="v-responsive__sizer"
       style="padding-bottom: 56.25%;"
  >
  </div>
  <transition-stub>
    <div class="v-img__image v-img__image--cover"
         style="background-image: url(LOAD_SUCCESS_SRC); background-position: center center;"
    >
    </div>
  </transition-stub>
  <div class="v-responsive__content">
  </div>
</div>
`;

exports[`VImg should update src 2`] = `
<div class="v-responsive v-img">
  <div class="v-responsive__sizer"
       style="padding-bottom: 56.25%;"
  >
  </div>
  <transition-stub>
    <div class="v-img__image v-img__image--cover"
         style="background-image: url(LOAD_SUCCESS_SRC-1); background-position: center center;"
    >
    </div>
  </transition-stub>
  <div class="v-responsive__content">
  </div>
</div>
`;

exports[`VImg should update src while still loading 1`] = `
<div class="v-responsive v-img">
  <div class="v-responsive__sizer">
  </div>
  <transition-stub>
    <div class="v-img__image v-img__image--preload v-img__image--cover"
         style="background-position: center center;"
    >
    </div>
  </transition-stub>
  <div class="v-responsive__content">
  </div>
</div>
`;

exports[`VImg should update src while still loading 2`] = `
<div class="v-responsive v-img">
  <div class="v-responsive__sizer"
       style="padding-bottom: 56.25%;"
  >
  </div>
  <transition-stub>
    <div class="v-img__image v-img__image--cover"
         style="background-image: url(LOAD_SUCCESS_SRC-1); background-position: center center;"
    >
    </div>
  </transition-stub>
  <div class="v-responsive__content">
  </div>
</div>
`;

exports[`VImg should use vuetify-loader data 1`] = `
<div class="v-responsive v-img">
  <div class="v-responsive__sizer"
       style="padding-bottom: 100%;"
  >
  </div>
  <transition-stub>
    <div class="v-img__image v-img__image--preload v-img__image--cover"
         style="background-image: url(lazySrc_auto); background-position: center center;"
    >
    </div>
  </transition-stub>
  <div class="v-responsive__content">
  </div>
</div>
`;
